# 3-python-package-team_saffron

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml  deliver.yaml
quizproject/data/: easy.csv  flashcards.csv  hard.csv  medium.csv
src/emojiguessr/: __init__.py  __main__.py  data.py  quiz.py  score.py
src/examples/: demo.py
tests/: test_data.py  test_main.py  test_quiz.py  test_score.py
